force-app/main/default/objects/Rota_de_Viagem__c/Rota_de_Viagem__c.object-meta.xml
<CustomObject>
    <label>Rota de Viagem</label>
    <nameField>
        <displayFormat>RV {00}</displayFormat>
        <label>Nº Rota de Viagem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rotas de Viagem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>