force-app/main/default/objects/Rota_de_Viagem__c/fields/Confirmada__c.field-meta.xml
<CustomField>
    <fullName>Confirmada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmada</label>
    <type>Checkbox</type>
</CustomField>