force-app/main/default/objects/Rota_de_Viagem__c/fields/Data_de_saida__c.field-meta.xml
<CustomField>
    <fullName>Data_de_saida__c</fullName>
    <label>Data de saída</label>
    <type>DateTime</type>
</CustomField>