force-app/main/default/objects/Rota_de_Viagem__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <label>Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>