force-app/main/default/objects/Rota_de_Viagem__c/fields/Estado_Destino__c.field-meta.xml
<CustomField>
    <fullName>Estado_Destino__c</fullName>
    <label>Estado Destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estados</valueSetName>
    </valueSet>
</CustomField>