force-app/main/default/objects/Rota_de_Viagem__c/fields/Motorista__c.field-meta.xml
<CustomField>
    <fullName>Motorista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motorista</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rotas de Viagem</relationshipLabel>
    <relationshipName>Rotas_de_Viagem</relationshipName>
    <type>Lookup</type>
</CustomField>