force-app/main/default/objects/Rota_de_Viagem__c/fields/Previsao_de_chegada__c.field-meta.xml
<CustomField>
    <fullName>Previsao_de_chegada__c</fullName>
    <label>Previsão de chegada</label>
    <type>Date</type>
</CustomField>