force-app/main/default/objects/Rota_de_Viagem__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF( Data_de_saida__c &gt;  NOW() , &apos;Futura&apos;, IF(Data_de_saida__c &lt; NOW() &amp;&amp;  Previsao_de_chegada__c &gt;= TODAY(), &apos;Em viagem&apos;, &apos;Concluída&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>