force-app/main/default/objects/Rota_de_Viagem__c/fields/Trajeto__c.field-meta.xml
<CustomField>
    <fullName>Trajeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trajeto</label>
    <referenceTo>Trajeto__c</referenceTo>
    <relationshipLabel>Rotas de Viagem</relationshipLabel>
    <relationshipName>Rotas_de_Viagem</relationshipName>
    <type>Lookup</type>
</CustomField>