force-app/main/default/objects/Rota_de_Viagem__c/fields/Transportadora__c.field-meta.xml
<CustomField>
    <fullName>Transportadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rotas de Viagem</relationshipLabel>
    <relationshipName>Rotas_de_Viagem</relationshipName>
    <type>Lookup</type>
</CustomField>