force-app/main/default/objects/Rota_de_Viagem__c/fields/Ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Ve_culo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Veículo</label>
    <referenceTo>Manuten_o_Preventiva_da_Frota__c</referenceTo>
    <relationshipLabel>Rotas de Viagem</relationshipLabel>
    <relationshipName>Rotas_de_Viagem</relationshipName>
    <type>Lookup</type>
</CustomField>