force-app/main/default/objects/Rota_de_Viagem__c/fields/Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo__c</fullName>
    <label>Tipo de Veículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caminhão</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Utilitário</fullName>
            </value>
            <value>
                <fullName>Picape</fullName>
            </value>
            <value>
                <fullName>Carro de passeio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>