force-app/main/default/objects/Rota_de_Viagem__c/validationRules/Transporte_proprio.validationRule-meta.xml
<ValidationRule>
    <fullName>Transporte_proprio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Tipo__c) == &apos;Própria&apos;,
OR(
Motorista__c == null
)
)</errorConditionFormula>
    <errorMessage>Para transporte próprio, preencha o motorista.</errorMessage>
</ValidationRule>