force-app/main/default/objects/Rota_de_Viagem__c/validationRules/Transporte_proprio2.validationRule-meta.xml
<ValidationRule>
    <fullName>Transporte_proprio2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Tipo__c) = &apos;Própria&apos;,
Transportadora__c != null
)</errorConditionFormula>
    <errorDisplayField>Transportadora__c</errorDisplayField>
    <errorMessage>Para transporte próprio, não preencha a transportadora.</errorMessage>
</ValidationRule>