force-app/main/default/objects/Rota_de_Viagem__c/validationRules/Transporte_terceirizado.validationRule-meta.xml
<ValidationRule>
    <fullName>Transporte_terceirizado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Tipo__c) == &apos;Terceirizada&apos;,
OR(
Ve_culo__c != null,
Motorista__c != null
)
)</errorConditionFormula>
    <errorMessage>Para transporte terceirizado, não preencha motorista e/ou veículo.</errorMessage>
</ValidationRule>