force-app/main/default/objects/Rota_de_Viagem__c/validationRules/Transporte_terceirizado2.validationRule-meta.xml
<ValidationRule>
    <fullName>Transporte_terceirizado2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Tipo__c) == &apos;Terceirizada&apos;,
Transportadora__c == null
)</errorConditionFormula>
    <errorDisplayField>Transportadora__c</errorDisplayField>
    <errorMessage>Para transporte terceirizado, preencha a transportadora.</errorMessage>
</ValidationRule>