force-app/main/default/objects/Rota_de_Viagem__c/listViews/C_pia_de_Futuras.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Futuras</fullName>
    <columns>NAME</columns>
    <columns>Estado_Origem__c</columns>
    <columns>Origem__c</columns>
    <columns>Estado_Destino__c</columns>
    <columns>Destino__c</columns>
    <columns>Data_de_saida__c</columns>
    <columns>Previsao_de_chegada__c</columns>
    <columns>Veiculo__c</columns>
    <columns>Capacidade__c</columns>
    <columns>Departamento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>