force-app/main/default/objects/Rota_de_Viagem__c/listViews/Conclu_das.listView-meta.xml
<ListView>
    <fullName>Conclu_das</fullName>
    <columns>NAME</columns>
    <columns>Origem__c</columns>
    <columns>Destino__c</columns>
    <columns>Data_de_saida__c</columns>
    <columns>Previsao_de_chegada__c</columns>
    <columns>Veiculo__c</columns>
    <columns>Capacidade__c</columns>
    <columns>Departamento__c</columns>
    <columns>Confirmada__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Situacao__c</field>
        <operation>equals</operation>
        <value>Concluída</value>
    </filters>
    <label>Concluídas</label>
</ListView>